# simple-api

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  docker-bake.hcl  gunicorn_config.py  log_conf.json  makefile  pycharm_postman.http  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
Dockerfiles/: Dockerfile.alpine  Dockerfile.debian
app/: test_main.py
docs/: README.CI.md  README.Docker.md  README.Servers.md  README.Testing.md
sonar-config/: sonar-project.properties.github  sonar-project.properties.gitlab
src/: main.py
tests/: test_main.py
